# reciprocator

./: .gitignore  README.md  pyproject.toml
corpora/chinese_classics/: README.md  sources.tsv
corpora/lisp_math/: README.md  sources.tsv
docs/: README.md  lab-book.md  memory-engines.md  reciprocator.md  test-plan.md  training.md
docs/rl/: lab-book.md  test-plan.md
runs/: lisp_eval_stage1_pretrain_vs_rl25_20260424.json  lisp_residual_probe_pretrain_vs_rl25_20260424.json
runs/lisp_math_pretrain_dynamic_growth_20260424/: config.json
runs/lisp_math_pretrain_dynamic_growth_h256_20260424/: config.json  residual_diagnostics.json
runs/lisp_math_pretrain_dynamic_growth_h256_frobenius_3000_20260424/: config.json
runs/lisp_math_pretrain_dynamic_growth_h256_long_fixed_forward_2000_20260424/: config.json
runs/lisp_math_pretrain_dynamic_growth_h256_per_mode_2000_20260424/: config.json
runs/lisp_math_pretrain_pilot_20260424/: checkpoint_step_000100.pt  checkpoint_step_000200.pt  config.json
runs/lisp_math_rl_stage1_grpo_h256_20260424/: checkpoint_step_000025.pt  (+2 more)
scripts/: analyze_rank_bottleneck.py  eval_lisp_checkpoint.py  generate_chengyu_prose.py  generate_lisp_math_corpus.py  lisp_rl_common.py  train.py  train_lisp_rl.py  train_mamba.py  train_transformer.py
tests/: test_complex_ops.py  test_corpora.py  test_curriculum.py  test_lisp_eval.py  test_mixer.py  test_model.py  test_phase_monitor.py  test_problem_gen.py  test_rank_bottleneck_script.py  test_reward.py  test_rl_phase_r0.py  test_rl_reward.py  test_rl_training.py  test_train_script.py  test_training.py
(+641 files in other folders)
