[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reciprocator"
version = "0.1.0"
description = "Minimal PyTorch scaffold for a reciprocator-based language model"
requires-python = ">=3.9"
dependencies = ["torch"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
